# progbox

./: .gitignore  CMakeLists.txt  NETv4.md  README.md  analysis.py  benchmark.py  buildprogbox.sh  charts.md  config.json  exportcleaner.py  main.py  net_analysis.py  progutils.py  runprogbox.sh  runsim.py  visualize.py
cmake/: generate_progression_registry.py
data/: input.csv  teaminfo.json
examples/outputs/: analysis.xlsx  godprogs.json  inputs.csv  superlucky.json
examples/outputs/raw/: godprogs.json  inputs.csv  superlucky.json
include/: analytics.hpp  core_types.hpp  generated_progression_registry.hpp  i_progression.hpp  ovr_math.hpp  progress.hpp  progression_registry.hpp  sim_engine.hpp
include/scripts/: v321_progression.hpp  v41_progression.hpp
outputs/: analysis.xlsx
outputs/20260323_174358/: metadata.json
outputs/20260323_174358/raw/: godprogs.json  superlucky.json
outputs/20260420005425/: metadata.json
outputs/20260420005425/raw/: godprogs.json  summary.csv  superlucky.json
outputs/20260506220709/: metadata.json
outputs/20260506220709/raw/: godprogs.json  summary.csv  superlucky.json
outputs/20260506220717/: metadata.json
outputs/20260506220717/raw/: godprogs.json  summary.csv  superlucky.json
outputs/raw/: godprogs.json  inputs.csv  outputs.csv  superlucky
scripts/: v0_progression.hpp  v321_progression.hpp  v41_progression.hpp  v43_progression.hpp
src/: main.cpp
tools/: analysis.py
